V1.2.4.5/ReadMe.md
由newton_miku制作

颜色解释

```c++
/*可见为绿色
不可见为红色
倒地敌人为蓝色*/
可见敌人为绿色
不可见敌人为护甲颜色（无甲/空甲也为白色）
倒地敌人为蓝色（闪烁）
```

使用方法

```
打开寄汤入口.bat查看提示即可
```

更新日志

```
V1.2.4.5 2022/7/15
更新：
	更新偏移地址
	观众显示功能基本完成
	修改驱动名称，避免被特征
修复：
	本次游戏更新后敌人发光需要对发光时间进行修改
V1.2.4.2 2022/7/9
更新：
	新增观众显示（F7)开关命令行及观众显示（测试中）
计划：
	预计下次版本更新将修改驱动，避免被特征
V1.2.4 2022/7/2
更新：
	修改验证方式与逻辑，优化用户体验（新增手动验证方式，机器码不变的情况下仅第一次启动需要扫码）
优化：
	关闭玩家发光后，敌人会立马取消发光，而不是一段时间后取消发光
修复：
	修复关闭敌人发光后无法再次开启的问题
V1.2.3.2 2022/7/1
更新：
	游戏更新，更新偏移地址
	更新bat文件逻辑，方便一键打开压枪宏与程序
V1.2.3.1 2022/6/30
更新：
	优化调试逻辑，方便测试，功能上并无差别
V1.2.3 2022/6/30
更新：
	修改发光颜色逻辑：如果敌人护甲值为0，则显示白色
	增加热键方便开关发光与护甲发光
V1.2.2 2022/6/29
更新：
	尝试修改队友的发光类型
	（如果无法穿墙显示队友，请使用备份文件夹中的V1.2)
V1.2.1
	内部测试，不做更新日志
V1.2 2022/6/22
更新：
	将不可见的敌人改为护甲颜色
	可见敌人仍为绿色，倒地敌人改为蓝色（闪烁）
	更改发光距离（从500m更改为1200m）
V1.1 2022/6/14
更新：
	每30s检测一次游戏是否存在，如果不存在则退出程序，避免驱动长时间被无效占用
	优化发光颜色
V1.0.1 2022/6/13
更新：
	修改图标，便于区分
	程序加载完成后会自动隐藏命令行窗口
V1.0 2022/6/12
	更换驱动
	完成发光显示功能
	完成区分敌人是否可见及倒地状态
	增加qq验证功能
```
